crates/keron-lang/tests/corpus/errors/check/sort_rejects_non_string_list.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: type mismatch: expected `String`, found `Int`
  --> 4:30
  |
4 | val xs: List<String> = sort([3, 1, 2])
  |                              ^
